--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyBbts0lc0I1ksQslh_rDRjTjybCpIPPG9Y",
-    authDomain: "car-racing-game-27b90.firebaseapp.com",
-    databaseURL: "https://car-racing-game-27b90-default-rtdb.firebaseio.com",
-    projectId: "car-racing-game-27b90",
-    storageBucket: "car-racing-game-27b90.appspot.com",
-    messagingSenderId: "56163672345",
-    appId: "1:56163672345:web:27c3015915ed03e3d6a588"
-  };
+ const firebaseConfig = {
+  apiKey: "AIzaSyB47OcsQD-RBIYTm0PgNFhZDd96bnQwOgs",
+  authDomain: "carmoving-9428a.firebaseapp.com",
+  databaseURL: "https://carmoving-9428a.firebaseio.com",
+  projectId: "carmoving-9428a",
+  storageBucket: "carmoving-9428a.appspot.com",
+  messagingSenderId: "1017263381031",
+  appId: "1:1017263381031:web:b324b13a6b0fb381c54c02"
+};
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
